<resources>
    <string name="app_name">Цветоводик</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Справочник цветовода</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>

    <string name="menu_plants">Виды комнатных растений</string>
    <string name="menu_disease">Болезни и вредители</string>
    <string name="menu_history">История растений</string>
    <string name="menu_signs">Приметы и суеверия</string>
    <string name="menu_test">Тест: Какой ты цветовод</string>
    <string name="menu_calendar">Календарь</string>

    <string name="avokado">Согласно моей условной классификации цветоводов (в которой есть и такие уникумы - «цветовод – легкая рука», «ходячая энциклопедия», «Маленький принц» и пр.), я скорее отношусь к типу «цветоводик – экспериментатор». Хлебом меня не корми, дай из какой-нибудь семечки «зеленого великана» вырастить. Если и вам, уважаемые читатели, по нраву такое растениеводство, то предлагаю вашему вниманию мой опыт по выращиванию авокадо из косточки в домашних условиях.\n\n

    ВЫБЕРИ МЕНЯ, ВЫБЕРИ МЕНЯ…\n\n
Хотите знать что нужно, чтобы вырастить авокадо у себя дома? Для начала отправляйтесь в магазин и приобретите себе самое спелое и сочное авокадо. Как понять, что вы выбрали именно такой плод? Ну, во-первых, это будет крупный фрукт.\n\n

Во-вторых, наощупь упругий. Авокадо мягкое? Скорее всего, оно перезрело. А если слишком твердое, то не дозрело. Можно еще надавить пальцем на фрукт, у спелого плода вмятина постепенно исчезнет, а вот у переспевшего она останется. Поэтому надавливайте без фанатизма.\n\n

В-третьих, кожура должна быть ровной, без темных пятен, трещин. Окрас - равномерный. А вот ее цвет не имеет значения, поскольку у одного сорта она может быть светло-зеленой, у другого - практически бурой. К слову, на сегодняшний день существует свыше 400 сортов авокадо.\n\n


ПЛАН Б\n\n
Впрочем, если вы все-таки промахнулись и купили неспелый плод - ничего страшного, его можно и в домашних условиях довести до кондиции. Заверните авокадо в бумажный пакет или бумажное полотенце и положите на пару дней в прохладное темное место. А еще поговаривают, что яблоки и бананы способствуют созреванию плода. Специалисты рекомендуют положить в бумажный пакет что-нибудь из этого списка и убрать в темное место. Желательно в пакете сделать дырочки, чтобы фрукты дышали.\n\n


ПОСАДИЛ ДЕД…«АЛЛИГАТОРОВУ ГРУШУ»\n\n
Косточку авокадо можно прорастить двумя способами: либо посадить в грунт, либо сначала дождаться корешков в воде.\n\n

Мы с авокадо испробовали оба способа. Первый нас не впечатлил: очень долго пришлось ждать появления росточка.\n\n

    А второй понравился больше, все происходит быстрее. Тем более этот способ позволяет наблюдать за чрезвычайно интересным процессом – пробуждением жизни.\n\n

В первом случае косточку очищают от коричневого «мундирчика», сажают в землю острым концом вверх, зарыв в землю приблизительно на треть. Если посадите слишком глубоко, то косточка может сгнить.\n\n

    Для второго варианта кожуру счищать не требуется, она сама постепенно отслоится. Достаточно будет косточку помыть и протереть.\n\n

    Теперь возьмите четыре зубочистки и проткните с четырех сторон косточку на одном уровне и на высоте чуть выше середины (острое окончание – это верх, широкое – низ). Предупреждаю, косточка плотная, проткнуть глубоко у вас не получится, но это и не требуется. Зубочистки обеспечат опору. Теперь возьмите какую-нибудь емкость: небольшую баночку, рюмку, одноразовый стаканчик. Налейте теплой кипяченой воды и водрузите вашу «конструкцию» (косточку с зубочистками) на «постамент» (стаканчик). Важно, чтобы вода была всегда на одном уровне, поэтому по мере испарения обязательно подливайте. Затем поставьте стаканчик в светлый уголок.\n\n


ПОРА, КРАСАВИЦА, ПРОСНИСЬ\n\n
То, что косточка «проснулась» извещают первые признаки – появление небольшой трещины, которая постепенно будет все больше разрастаться. Одни косточки довольно быстро пробуждаются - недели через две-три, а иным и месяца мало. Цветоводу-экспериментатору остается только ждать. Хорошо хоть выращивание авокадо не единственной дело, которому можно посветить свободное время дома. В принципе, после того как косточка разделилась надвое, можно ее укоренять. Но я предпочитаю дожидаться корешков. Я посадила авокадо в землю, когда корни достигли 5-6 см.\n\n

Иногда так бывает, что сначала пробивается росточек, а потом проклевываются корешки. Ничего страшного я в этом не вижу.\n\n

    Теперь берем глубокий пластмассовый горшок, поскольку корни у авокадо больше растут в длину, чем в ширину. Кроме того, на дне горшка должно быть много отверстий для оттока воды. На дно насыпаем керамзит.\n\n

Почва должна быть плодородной. Кислая почва авокадо не по нраву. Специалисты рекомендуют такую смесь в соотношении 1:1:1: садовая земля, перегной (или сырой торф), песок, можно добавить известь. Земля не должна слеживаться, поэтому регулярно разрыхляйте землю. Обильно поливайте.\n\n

При посадке косточку не удаляем, это фишка растения. Правда, у меня почему-то зимой она сначала сморщилась, а потом обе половинки почернели и отпали.\n\n



«АВОКАШИК» МАЛ, ДА УДАЛ\n\n
Фрукт растет не по дням, а по часам. Через какое-то время «Авокашика» следует величать «Авокадий Авокадиевич».\n\n

    Так случилось, что проклюнувшийся побег я нечаянно прищипнула. Но мой «авокашик» не обиделся, а пустил чуть позже две веточки.\n\n

Когда росточек достигнет 10-15 см, следует пересадить в более глубокий горшок. Заметила, что если рост деревца приостановился, значит, корням стало тесно – пора менять тару.\n\n

    В природе авокадо может достигать 18 метров, в домашних условиях цветоводу это, конечно, не грозит, но если не прищипывать, то «авокадий» быстро вытягивается и занимает много места в доме, а под весом своих листьев ствол искривляется.\n\n

У моего растения две ветки стали клониться в разные стороны, поэтому я их переплела, как у фикуса.\n\n

Регулярно подкармливайте авокадо, например, удобрениями для тропических растений.\n\n

Экзотическое деревце любит свет, но не прямые солнечные лучи. Если в помещении сухо, то регулярно опрыскивайте деревцо. Как еще повысить естественную влажность помещения, смотрите здесь.\n\n

В холодное время года полив сокращается, зимой авокадо предпочитает прохладу. Но если очень холодно, то авокадо может сбросить листья, впрочем, когда жарко он также поступает. Из-за этого некоторые цветоводы в порыве паники выкидывают свои «растишки», думая, что деревце не спасти. Но это не так, продолжайте ухаживать за экзотом, вскоре он нарастит новую листву.\n\n

Если соблюдать эти нехитрые правила, то несколько лет «авокадий» будет радовать своим причудливыми видом. Плодов, правда, не ждите. Все-таки у нас не тропики.\n\n

    АВОКАДО - ТОТ ЕЩЕ ФРУКТ\n\n
Должна вас предупредить, что листья, кожура плода и косточка авокадо содержат фунгицидный токсин – персин. Он опасен как для животных, так и человека. Может спровоцировать аллергическую реакцию и ухудшение работы пищеварительной системы.\n\n

Рекомендую, все земледельческие работы с фруктом проводить в перчатках.\n\n

Зато мошки его обходят стороной))\n\n

Теперь вы знаете как можно вырастить авокадо из косточки дома. Напишите нам о своих результатах.\n\n</string>
    <string name="aglaonema">В культовом фильме Люка Бессона «Леон» рядом с Матильдой и хладнокровным киллером частенько появляется еще один персонаж – цветок аглаонема. На протяжении всего действия мы видим как брутальный Леон нежно заботится о своем «зеленом питомце»: регулярно опрыскивает, протирает листья, выставляет растение навстречу утренним лучам и носит везде с собой. После выхода в прокат киноленты буквально начался бум на это растение, все хотели цветок как у Леона.\n\n

Аглаонема (Aglaonema) - индо-малайское растение семейства ароидные. Как и большинство ароидных, "житель тропиков" относится к группе ядовитых растений. Сок ее может вызвать раздражение кожи. Поэтому пересаживать растение лучше в перчатках. Но этот недостаток компенсируется другими его положительными качествами. Так, листья аглаонемы выделяют фитонциды, которые очищает воздух от формальдегида, бензола и других токсичных веществ. Кроме того, цветок эффективен в борьбе со стрептококком.\n\n

Аглаонема - это травянистое растение не более 70 см в высоту. Листья крупные овальные, похожи на вытянутые лопухи. Окраска обитателя подоконника самая разнообразная, встречаются виды, у которых листовые пластины имеют даже серебристые вкрапления. Ствол у растения короткий, заметен только у взрослых экземпляров.\n\n

    На фоне изысканных листьев цветы у аглаонема выглядят несколько скромнее. Поэтому цветоводы чаще всего квалифицируют это растение как декоративно-лиственное. Соцветие аглаонемы, как и у спатифиллума, представляет собой початок, оберегаемый листом-покрывалом. После цветения появляются красные ягоды, содержащие по одному семени, которые после созревания можно высадить и попробовать размножить. Цветет в течение двух недель, плод созревает 6-8 месяцев.\n\n

    Систематики по-разному оценивают видовое разнообразие аглаонем. Одни утверждают, что род насчитывает 20 видов, другие – 50. Перечислим лишь самые популярные в комнатном цветоводстве:\n\n

аглаонема скромная (зеленые листья, равномерно окрашенные);\n
аглаонема переменчивая (прямостоячий стебель, беловатыми полосками или мазками на зеленых листьях);\n
аглаонема расписная (на темно-зеленых листьях красивые серебристые пятна);\n
аглаонема Крит (необычное сочетание зеленых и красных оттенков, листья могут быть и полностью красными).\n\n
Аглаонема - обитатель нижнего яруса тропического леса, поэтому любит влажность и является теневыносливым растением. При соблюдении нехитрых правил ухода растюха будет все время радовать вас пестрой листвой.\n\n

УХОД ЗА АГЛАОНЕМОЙ\n\n
Освещение. От прямых солнечных лучей страдает ожогами. Растения с ярким окрасом листьев, в отличие от зеленых видов, нуждаются в большем количестве света. Аглаонему скромную можно поставить и в дальний угол комнаты.\n\n

Температура. Теплолюбивое растение 23-25оС оптимальная температура для роста. Плохо переносит сквозняки и перепады температур.\n\n

    Влажность. Опрыскивание летом - один из секретов выращивания аглаонемы. Влаголюбивое растение с благодарностью воспримет и протирание листьев влажной губкой. Чтобы создать дополнительное увлажнение можно поставить горшок на мокрый керамзит. В сухом воздухе листья подсыхают, сворачиваются и плохо растут.\n\n

Полив. Хорошо воспринимает обильный полив летом. Зимой при спаде температур нужно следить, чтобы не было загнивания от высокой влажности.\n\n

Подкормка. Вносят раз в две недели минеральные или органические удобрения для комнатных растений. В зимний период не удобряют. \n\n

Почва. Аглаонема неприхотлива к составу почвы. Главное условие - гидроскопичность субстрата. Подойдет и такой состав: листовая земля (2 части), торф (1 часть), песок (1часть).\n\n

Пересадка. Медленный темп роста и неприхотливость к почве, позволяют подолгу не пересаживать растение (раз в 3-4 года).\n\n

Размножение. Срезанными черенками или делением кустика с корнями при пересадке. Отделенное растеньице с корнями можно сразу высаживать в грунт. \n\n

А вот срезанный черенок с 3-5 листами сначала нужно укоренить. Делают это в воде, регулярно ее меняя, или в смеси торфа и песка. После укоренения высаживают в обычную для аглаонемы землесмесь.\n\n

Размножение семенами задача непростая. Предварительно нужно отделить от кожицы, высадить в рыхлую землю и проращивать при температуре 25оС. Всходы появляются примерно через месяц.</string>
</resources>
