<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.wpx.splants.ui.home.HomeFragment"
        android:label="@string/menu_plants"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.wpx.splants.ui.gallery.GalleryFragment"
        android:label="@string/menu_disease"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.wpx.splants.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.wpx.splants.ui.tools.ToolsFragment"
        android:label="@string/menu_signs"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.wpx.splants.ui.share.ShareFragment"
        android:label="@string/menu_test"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.wpx.splants.ui.send.SendFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_send" />
</navigation>